# fast-react

./: README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: Banner.jsx
client/src/components/buttons/: EditButton.jsx  IconButton.jsx  RemoveButton.jsx
client/src/components/form/: FormGroup.jsx  Helper.jsx  Input.jsx  Label.jsx  SubmitButton.jsx
client/src/components/modal/: Modal.jsx
client/src/components/table/: TBody.jsx  TCell.jsx  THead.jsx  THeadCell.jsx  TRow.jsx  Table.jsx
client/src/config/: API.js  ENV.js
client/src/helpers/: ClassName.js  Token.js
client/src/pages/auth/: Authenticated.jsx  Login.jsx
client/src/pages/layouts/: Index.jsx
client/src/pages/models/users/: CreateModal.jsx  EditModal.jsx  RemoveModal.jsx  Users.jsx
server/: project.db  pyproject.toml  requirements.txt
server/commands/: generate_secret.py
server/migrations/: env.py
server/migrations/versions/: f910d9fe4653_create_users_table.py
server/server/: app.py
server/server/helpers/: __init__.py  database.py  exceptions.py  security.py  settings.py  users.py
server/server/models/: user.py
server/server/routes/: __init__.py  auth.py  default.py  users.py
server/server/schemas/: __init__.py  filters.py  shared.py  token.py  user.py
server/server/types/: auth.py  database.py  filters.py  settings.py  users.py
server/tests/: conftest.py
server/tests/db/: test_db.py
server/tests/helpers/: test_security.py
server/tests/routes/: test_auth.py  test_default.py  test_users.py
(+1 files in other folders)
